width scrollbar fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -68,7 +68,7 @@ html {
 
 /* Estilos para la barra de desplazamiento */
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
     background-color: rgb(0, 0, 0);
 
   }
